force-app/main/default/objects/RequiredFieldsMapping__mdt/RequiredFieldsMapping__mdt.object-meta.xml
<CustomObject>
    <description>Metadata genérico para campos requeridos para ser utilizados em API, com  api name, objeto, tipo de registro, onde é utilizado e msg de Erro.</description>
    <label>Mapeamento de campos requeridos</label>
    <pluralLabel>Mapeamento de campos requeridos</pluralLabel>
</CustomObject>