force-app/main/default/objects/RequiredFieldsMapping__mdt/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <description>ApiName do campo desejado</description>
    <label>ApiName</label>
    <type>TextArea</type>
</CustomField>