force-app/main/default/objects/RequiredFieldsMapping__mdt/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>ErrorMessage Mensagem que deve ser apresentado ao usuario do campo desejado</description>
    <label>Mensagem de Erro</label>
    <type>TextArea</type>
</CustomField>