force-app/main/default/objects/RequiredFieldsMapping__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Nome do campo desejado</description>
    <label>Nome</label>
    <type>TextArea</type>
</CustomField>