force-app/main/default/objects/RequiredFieldsMapping__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Object do campo desejado</description>
    <label>Objeto</label>
    <type>TextArea</type>
</CustomField>