force-app/main/default/objects/RequiredFieldsMapping__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>RecordType do campo desejado</description>
    <label>Tipo de registro</label>
    <type>TextArea</type>
</CustomField>