force-app/main/default/objects/RequiredFieldsMapping__mdt/fields/UsedIn__c.field-meta.xml
<CustomField>
    <fullName>UsedIn__c</fullName>
    <description>UsedIn onde o campo desejado será utilizado</description>
    <label>Utilizado em</label>
    <type>TextArea</type>
</CustomField>